--- a/FRONT/gatsby-sens-interdits/src/templates/archiveFestival.css
+++ b/FRONT/gatsby-sens-interdits/src/templates/archiveFestival.css
@@ -1,32 +1,36 @@
 .archive-global-styling {
-    width: 100%;
-    max-width: 1080px;
-    margin: 0 auto;
-  }
-  
+  width: 100%;
+  max-width: 1080px;
+  margin: 0 auto;
+  padding-bottom: 40px;
+}
+
+.text-justify {
+  text-align: justify;
+}
+
+.image-generique-page img {
+  object-fit: scale-down;
+  height: 400px;
+  width: 1080px;
+  margin-top: 50px;
+}
+.downloadPdf {
+  font-size: 16px;
+  color: #000 !important;
+  padding-left: 24%;
+  text-align: center;
+}
+.downloadPdf img {
+  position: relative;
+  top: 10px;
+  left: -10px;
+}
+@media screen and (max-width: 960px) {
   .image-generique-page img {
-    object-fit: scale-down;
-    height: 400px;
-    width: 1080px;
-    margin-top: 50px;
+    display: none;
   }
-  .downloadPdf{
-    font-size: 16px;
-    color: #000!important;
-    padding-left:24%;
-    text-align: center;
+  .downloadPdf img {
+    display: none;
   }
-  .downloadPdf img{
-    position: relative;
-    top: 10px;
-    left: -10px;
-  }
-  @media screen and (max-width: 960px) {
-    .image-generique-page img {
-      display: none;
-    }
-    .downloadPdf img{
-      display: none;;
-    }
-  }
-  
+}
