--- a/FRONT/gatsby-sens-interdits/src/templates/archiveFestival.css
+++ b/FRONT/gatsby-sens-interdits/src/templates/archiveFestival.css
@@ -26,11 +26,36 @@
   top: 10px;
   left: -10px;
 }
+@media screen and (max-width: 1140px) {
+  /* TODO */
+  .text-justify {
+    padding: 20px 40px;
+  }
+  .global-margin h1 {
+    padding: 10px 40px;
+  }
+  .archive-transmission-grid-wrapper {
+    grid-template-columns: 50% 50%;
+    justify-items: center;
+  }
+  .name-mini-tab,
+  .team-mini-tab {
+    width: 200px;
+  }
+}
+
 @media screen and (max-width: 960px) {
   .image-generique-page img {
     display: none;
   }
   .downloadPdf img {
     display: none;
+  }
+  .global-margin h1 {
+    text-align: center;
+  }
+  .mini-tab {
+    margin: auto;
+    padding: 20px 0;
   }
 }
